kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eap-sample
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    deployment: eap-sample
  sessionAffinity: None
  type: ClusterIP
