kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eap-sample
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: eap-sample
    weight: 100
